--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,29 @@
-asn1crypto==0.22.0
-backports.weakref==1.0rc1
+asn1crypto==0.23.0
 bleach==1.5.0
-certifi==2017.4.17
-cffi==1.10.0
+certifi==2017.11.5
+cffi==1.11.2
 chardet==3.0.4
-cryptography==1.9
+cryptography==2.1.3
 cycler==0.10.0
+enum34==1.1.6
 html5lib==0.9999999
-idna==2.5
-Markdown==2.2.0
-matplotlib==2.0.2
-numpy==1.13.0
+idna==2.6
+Markdown==2.6.9
+matplotlib==2.1.0
+numpy==1.13.3
 olefile==0.44
-Pillow==4.1.1
-protobuf==3.3.0
-pycparser==2.17
-pyOpenSSL==17.0.0
+Pillow==4.3.0
+protobuf==3.5.0.post1
+pycparser==2.18
+pyOpenSSL==17.4.0
 pyparsing==2.2.0
 pysolr==3.6.0
-python-dateutil==2.6.0
-pytz==2017.2
-requests==2.18.1
-six==1.10.0
-tensorflow==1.2.0
-urllib3==1.21.1
-watson-developer-cloud==0.26.0
+python-dateutil==2.6.1
+pytz==2017.3
+requests==2.18.4
+six==1.11.0
+tensorflow==1.4.0
+tensorflow-tensorboard==0.4.0rc3
+urllib3==1.22
+watson-developer-cloud==1.0.0
 Werkzeug==0.12.2
